@@ -107,12 +107,12 @@ public class WebdavGetAction extends WebdavHeadAction {
 				if(offset > range.endOffset) {
 					continue;
 				}
-				int read = 0;
-				int need = (int) ((offset + chunk.length >= range.endOffset) ? range.endOffset - offset + 1 : chunk.length);
+				int read = 0; 
+				int need = (int) Math.min(chunk.length, range.endOffset - offset + 1);
 				while(need > 0 && (read = in.read(chunk, 0, need)) != -1) {
 					out.write(chunk,0,read);
 					offset += read;
-					need = (int) ((offset + chunk.length >= range.endOffset) ? range.endOffset - offset + 1: chunk.length);
+					need = (int) Math.min(chunk.length, range.endOffset - offset + 1);
 				}
 			}
 			
